# sonos-lastfm

./: AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
skills/setup-sonos-lastfm/: SKILL.md
src/sonos_lastfm/: __init__.py  __main__.py  cli.py  config.py  sonos_lastfm.py  utils.py
tests/: conftest.py  test_cli_credentials.py  test_cli_run.py  test_config.py  test_module_entrypoint.py  test_scrobble_logic.py  test_track_info_parsing.py  test_utils.py
